--- a/assets/styleLanding.css
+++ b/assets/styleLanding.css
@@ -131,6 +131,7 @@ nav {
 #signUpDiv ul {
 	list-style-type: none;
 	padding: 0;
+	margin: 0.2em 0;
 }
 
 #signUpDiv ul li {
@@ -149,6 +150,7 @@ nav {
 	font-size: 1.3em;
 	padding: 0;
 	margin-top: 1em;
+	margin-bottom: 0;
 }
 
 #errorMessage {
@@ -335,11 +337,6 @@ select:focus {
 }
 
 /* cards */
-/* #btmRight {
-	background-image: url("./photos/driedSeafoodStreet.jpg");
-	background-size: cover;
-	background-position: center;
-} */
 #btmLeft,
 #btmRight {
 	padding: 0 15px;
