--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -58,16 +58,16 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav ml-auto" id="navbarList">
 					<li class="nav-item">
-						<a class="nav-link" href="#">Rewards</a>
+						<a class="nav-link" href="/rewards">Rewards</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Posts</a>
+						<a class="nav-link" href="/posts">Posts</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Settings</a>
+						<a class="nav-link" href="/settings">Settings</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Log Out</a>
+						<a class="nav-link" href="/logout">Log Out</a>
 					</li>
 				</ul>
 			</div>
@@ -102,7 +102,7 @@
 							</div>
 							<div class="col-6 userTextDiv">
 								<h4 class="username">HaileyJensen</h4>
-								<p class="points">Points earned: 240</p>
+								<p class="points">Gems earned: 240</p>
 							</div>
 						</div>
 						<br />
