--- a/assets/styleDashboard.css
+++ b/assets/styleDashboard.css
@@ -56,30 +56,49 @@ nav {
 }
 /* content */
 .outerDBContainer {
-	margin-top: 12vh;
+	margin: 12vh 0;
 }
 
 /* user details section */
-.fixedWrapper {
+/* .fixedWrapper {
 	position: fixed;
-}
+} */
 .userPhoto {
 	border-radius: 50%;
+	width: 6vw;
 }
 .userDetails {
 	display: flex;
 	align-items: center;
 	align-content: flex-start;
+	margin-bottom: 1em;
 }
 .username {
 	text-shadow: 2px 2px #494949;
 }
 .points {
+	font-size: 0.9em;
 	text-shadow: 1px 1px #494949;
 }
 .userPhotoDiv,
 .userTextDiv {
 	padding: 0;
+}
+
+/* filters */
+.filters {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: flex-end;
+	justify-content: flex-end;
+	font-size: 0.8em;
+	padding-right: 0;
+}
+
+#whatSelector,
+#whereSelector {
+	width: 150px;
+	margin-bottom: 0.8em;
 }
 
 /* write post form */
@@ -100,9 +119,23 @@ nav {
 }
 
 #postContent {
-	height: 150px;
+	height: 120px;
 }
 
+/* latlng of map */
+#postLat,
+#postLng {
+	/* visibility: hidden; */
+	display: none;
+}
+#postMap {
+	margin-top: 1em;
+	background-color: #494949; /*for visibility*/
+	width: 100%;
+	height: 170px;
+}
+
+/* submit btn */
 #submitPost {
 	margin: 10px;
 	background-color: #494949;
@@ -118,6 +151,19 @@ nav {
 	color: #494949;
 }
 
+/* choose photo */
+.selectedFileText {
+	text-align: left;
+}
+
+#selected {
+	text-align: left;
+	display: inline-block;
+	max-width: 15vw;
+	font-size: 0.7em;
+	color: #494949;
+	padding-top: 10px;
+}
 .choosePhoto {
 	background-color: #494949;
 	color: #fff;
@@ -134,21 +180,30 @@ input[type="file"] {
 	display: none;
 }
 
-/* filters */
-.filters {
-	margin-top: 5vh;
+#postPhotoUrl {
+	display: none;
 }
-#whatSelector,
-#whereSelector {
-	width: 100%;
+
+/* post selectors */
+.selectors {
+	display: flex;
+	flex-wrap: nowrap;
+	align-items: center;
+	justify-content: space-between;
+	padding-top: 2vh;
+}
+#postWhatSelector,
+#postWhereSelector {
+	font-size: 0.8em;
+	width: 50%;
+	margin-bottom: 0.8em;
 }
 
 /* trending post */
 .trendingPost {
 	background-color: #fff;
-	/* box-shadow: 6px 6px #494949; */
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-	margin: 5vmin;
+	margin: 0 0 5vh 5vmin;
 	color: #494949;
 	font-size: 14px;
 	display: flex;
@@ -165,7 +220,6 @@ input[type="file"] {
 }
 .trendingUserContentDiv p {
 	padding: 5px 0;
-
 	margin: 0%;
 }
 
@@ -178,6 +232,7 @@ input[type="file"] {
 .counters a {
 	color: #494949;
 }
+
 .trendingPhoto {
 	padding: 0;
 	width: 100%;
@@ -192,5 +247,8 @@ input[type="file"] {
 	}
 	.outerDBContainer {
 		margin-top: 10vh;
+	}
+	.fixedWrapper {
+		position: relative;
 	}
 }
