--- a/views/error.ejs
+++ b/views/error.ejs
@@ -19,10 +19,12 @@
 			crossorigin="anonymous"
 		/>
 		<!-- font awesome  -->
-		<script
-			src="https://kit.fontawesome.com/fdd79be92b.js"
+		<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+			integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
 			crossorigin="anonymous"
-		></script>
+		/>
 		<!-- Google font -->
 		<link
 			href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
