--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
     <!-- font awesome  -->
-    <script src="https://kit.fontawesome.com/fdd79be92b.js" crossorigin="anonymous"></script>
+    		<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+			integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
+			crossorigin="anonymous"
+		/>
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
@@ -59,7 +64,7 @@
     </div>
 
     <!-- contents  -->
-    <div class="container-fluid outerContainer">
+<div class="container-fluid outerContainer">
         <div class="row justify-content-center topRow">
             <!-- top left content (header) -->
             <div class="col-lg-5 col-md-10 col-sm-10 headerContainer">
@@ -72,11 +77,11 @@
             <div class="col-lg-5 col-md-10 col-sm-10 signUpContainer">
                 <div id="signUpDiv">
                 <div class="tabs">
-  <div class="tab-2">
-       <!-- sign up -->
-    <label for="tab2-1">Sign Up</label>
-    <input id="tab2-1" name="tabs-two" type="radio" checked="checked">
-    <div>
+                <div class="tab-2">
+                <!-- sign up -->
+                    <label for="tab2-1">Sign Up</label>
+                    <input id="tab2-1" name="tabs-two" type="radio" checked="checked">
+                    <div>
        
                       <p id="signUpDivTitle"><strong>Sign up here!</strong></p>
                 <ul>
@@ -102,7 +107,7 @@
                             placeholder="CONFIRM PASSWORD" required><br />
                         <button type="submit" id="signUpBtn">Join Now</button><br /></form>
                         <span class="oAuthSignUp"><a href="/auth/google" id="googleOAuthSignUp"><i class="fab fa-google"></i></a>
-<a href="/auth/fb" id="fbOAuthSignUp"><i class="fab fa-facebook-square"></i></a></span><span class="privacy">By signing up, you agree to the <a href="#">Terms</a> and <a href="#">Privacy
+        <a href="/auth/fb" id="fbOAuthSignUp"><i class="fab fa-facebook-square"></i></a></span><span class="privacy">By signing up, you agree to the <a href="#">Terms</a> and <a href="#">Privacy
                                 Policy</a>.</span>
     </div>
   </div>
@@ -117,12 +122,12 @@
                         <input type="password" name="password" id="passwordLogin" placeholder="PASSWORD" required><br />
                         <button type="submit" id="logInBtn">Log In</button><br /></form>
                         <span class="oAuthSignIn"><a href="/auth/google" id="googleOAuthSignIn"><i class="fab fa-google"></i></a>
-<a href="/auth/fb" id="fbOAuthSignIn"><i class="fab fa-facebook-square"></i></a></span>
+        <a href="/auth/fb" id="fbOAuthSignIn"><i class="fab fa-facebook-square"></i></a></span>
     </div>
   </div>
 </div>
-                </div>
-             </div>
+</div>
+</div>
 
 
     <!-- bottom content -->
@@ -179,7 +184,7 @@
                         <p>
                         <h3><i class="fas fa-quote-left"></i></h3>The whimsical life of Hong Kong’s shop cats is
                         showcased
-                        in a new book by a Dutch photographer after... <br /><br /><a href="#">click to read more</a>
+                        in a new book by a Dutch photographer after... <br /><br /><a href="/explore">click to read more</a>
                         </p>
                     </div>
                 </div>
@@ -193,7 +198,7 @@
                         <p>
                         <h3><i class="fas fa-quote-left"></i></h3>A section of
                         Des Voeux Road West in Sheung Wan is packed with shops selling dried seafood. The
-                        origins of the trade... <br /><br /><a href="#">click to read more</a></p>
+                        origins of the trade... <br /><br /><a href="/explore">click to read more</a></p>
                     </div>
                 </div>
 
